= master

* Make common_logger plugin handle raised errors (jeremyevans)

= 3.12.0 (2018-09-14)

* Add common_logger plugin for common log support (jeremyevans)

= 3.11.0 (2018-08-15)

* Disable default compression of sessions over 128 bytes in the sessions plugin (jeremyevans)

* Log but otherwise ignore exceptions raised by after processing of error handler response (jeremyevans)

* Modify internal before/after processing to avoid plugin load order issues (jeremyevans)

= 3.10.0 (2018-07-18)

* Remove flash key from session if new flash is empty when rotating flash (jeremyevans)

* Speed up RodaRequest initialization by avoiding 1-2 method calls (jeremyevans)

* Add roda/session_middleware (RodaSessionMiddleware), usable as a middleware by any Rack app to use Roda's session support (jeremyevans)

* Add sessions plugin for more secure (encrypted+signed) sessions (jeremyevans)

* Support :json_parser and :json_serializer application options as default implementations for parsing/serializing JSON (jeremyevans)

* Add :handle_result option to middleware plugin for modifying rack result before returning it (jeremyevans)

* Make the flash plugin work correctly when sessions are serialized with JSON (jeremyevans)

* Make Integer in typecast_params handle Numeric input, and require that Numeric input not have fractional parts (jeremyevans) (#146)

= 3.9.0 (2018-06-11)

* Add route_csrf plugin for CSRF protection, offering more control, better security, and request-specific tokens compared to rack_csrf (jeremyevans)

= 3.8.0 (2018-05-17)

* Accept convert_each! :keys option that is Proc or Method in typecast_params plugin (jeremyevans)

* Make convert_each! in typecast_params plugin handle hashes with '0'..'N' keys without :keys option (jeremyevans)

= 3.7.0 (2018-04-20)

* Make response_request plugin work with error_handler and class_level_routing plugins (jeremyevans)
