@@ -50,6 +50,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/BranchLocals.html">branch_locals</a>: Adds ability to specify defaults for template locals on a per-branch basis.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Chunked.html">chunked</a>: Adds support for streaming template responses using Transfer-Encoding: chunked.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ContentFor.html">content_for</a>: Allows storage of content in one template and retrieval of that content in a different template.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/ExceptionPage.html">exception_page</a>: Shows page with debugging information for exceptions, designed for use in error handler in development mode.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/H.html">h</a>: Adds h method for html escaping.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Json.html">json</a>: Allows match blocks to return arrays and hashes, using a json representation as the response body.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/MultiView.html">multi_view</a>: Allows for easily setting up routing for rendering multiple views.</li>
